crates/cadenza-syntax/test-data/invalid-parse/error-recovery-next-line.cdz
let x = )
let y = 5
